feat(toast): create Toast and Toaster components

--- a/projects/navigation/list/src/lib/list-item/list-item.component.scss
+++ b/projects/navigation/list/src/lib/list-item/list-item.component.scss
@@ -12,6 +12,7 @@
   align-items: center;
   border-radius: 2px;
   color: var(--list-item__color, inherit);
+  cursor: pointer;
   display: flex;
   min-height: 4.8rem;
   justify-content: space-between;
