refactor(button): allow custom color on tertiary buttons

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -210,7 +210,7 @@
     // );
 
     background: none;
-    color: var(--textcolor);
+    color: var(--button__color, var(--textcolor));
   }
 
   &.xcu-button--warning:not([disabled]) {
