--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -26,6 +26,11 @@
   --text-purple: #553c9a;
   --text-pink: #97266d;
 
+  --xcu-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+
+  box-shadow: var(--xcu-ring-offset-shadow, 0 0 #0000),
+    var(--xcu-ring-shadow, 0 0 #0000), var(--xcu-shadow);
+
   align-items: center;
   background-color: var(--bg-gray);
   border-radius: 9999px;
