refactor(badge): update background colors

--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -5,16 +5,16 @@
 }
 
 :host {
-  --bg-gray: #f7fafc;
-  --bg-red: #fff5f5;
-  --bg-orange: #fffaf0;
-  --bg-yellow: ivory;
-  --bg-green: #f0fff4;
-  --bg-teal: #e6fffa;
-  --bg-blue: #ebf8ff;
-  --bg-indigo: #ebf4ff;
-  --bg-purple: #faf5ff;
-  --bg-pink: #fff5f7;
+  --bg-gray: #f4f5f7;
+  --bg-red: #fde8e7;
+  --bg-orange: #feecdc;
+  --bg-yellow: #fdf6b2;
+  --bg-green: #def7ec;
+  --bg-teal: #d5f5f6;
+  --bg-blue: #e1effe;
+  --bg-indigo: #e5edff;
+  --bg-purple: #edebfe;
+  --bg-pink: #fce8f3;
   --text-gray: #2d3748;
   --text-red: #9b2c2c;
   --text-orange: #9c4221;
