fix(list): fix typo in list item content selector name

--- a/projects/navigation/list/src/lib/list-item/list-item.component.html
+++ b/projects/navigation/list/src/lib/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <div class="list-item__content">
   <ng-content select="svg, [xcu-avatar]"></ng-content>
 
-  <ng-content select="[xcu-list-item-content], [xcuListItemConten]"></ng-content>
+  <ng-content select="[xcu-list-item-content], [xcuListItemContent]"></ng-content>
 </div>
 
 <ng-content></ng-content>
