refactor: use secondary color for disabled checkboxes and radios

--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -27,6 +27,10 @@
 
   &.disabled {
     cursor: default;
+
+    .xcu-checkbox-label {
+      color: var(--textcolor--secondary);
+    }
   }
 
   &:focus {
