refactor(list): add CSS variable for width on list-item-content

--- a/projects/navigation/list/src/lib/list-item-content/list-item-content.component.scss
+++ b/projects/navigation/list/src/lib/list-item-content/list-item-content.component.scss
@@ -1,6 +1,7 @@
 .list-item__content {
   display: flex;
   align-items: center;
+  width: var(--list-item-content__width, fit-content);
 
   svg {
     fill: var(--list-icon__fill, currentColor);
