--- a/projects/navigation/toggle/src/lib/toggle.component.scss
+++ b/projects/navigation/toggle/src/lib/toggle.component.scss
@@ -131,7 +131,7 @@
     font-weight: var(--font-weight--semi-bold);
     justify-content: space-between;
     line-height: 24px;
-    padding: 16px 24px 16px 0;
+    padding: 0.8rem;
     width: 100%;
 
     &:hover {
