--- a/projects/form/radio/src/lib/radio.component.scss
+++ b/projects/form/radio/src/lib/radio.component.scss
@@ -158,6 +158,7 @@ label {
   line-height: 2rem;
   color: var(--textcolor--secondary);
   font-weight: var(--font-weight--medium);
+  width: var(--radio-label-width, auto);
 }
 .radio--align-end .label-container {
   --radio-label-margin: 0 1.2rem 0 0;
