feat(banner): title max-width set to fit-content by default

--- a/projects/feedback/banner/src/lib/banner.component.html
+++ b/projects/feedback/banner/src/lib/banner.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="dismiss">
-      <button *ngIf="dismissable" (click)="dismiss()" type="button" class="dismiss__button">
+      <button *ngIf="dismissible" (click)="dismiss()" type="button" class="dismiss__button">
         <span>Dismiss</span>
         <svg height="24" width="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
           stroke="currentColor" aria-hidden="true">
