--- a/projects/feedback/dialog/src/lib/footer/footer.component.scss
+++ b/projects/feedback/dialog/src/lib/footer/footer.component.scss
@@ -1,12 +1,12 @@
 :host {
-  padding: 0.8rem 1.6rem 1.6rem;
+  padding: var(--dialog-footer__padding--tablet, 0.8rem 1.6rem 1.6rem);
   display: flex;
   flex-direction: column-reverse;
 
   @media (min-width: 640px) {
     flex-direction: row;
     justify-content: flex-end;
-    padding: 0.8rem 2.4rem 2.4rem;
+    padding: var(--dialog-footer__padding, 0.8rem 2.4rem 2.4rem);
 
     &.centered-wide {
       display: grid;
