--- a/projects/form/checkbox/src/lib/checkbox.component.html
+++ b/projects/form/checkbox/src/lib/checkbox.component.html
@@ -1,7 +1,7 @@
 <label #checkboxLabel [attr.for]="inputId" class="xcu-checkbox-label"
   [class.checkbox--align-end]="labelPosition == 'before'">
   <span class="xcu-checkbox-input__container">
-    <input #input class="xcu-checkbox-input" [type]="type" [id]="inputId" [required]="required" [checked]="checked"
+    <input #input class="xcu-checkbox-input" [type]="type" [id]="inputId" [required]="required" [(checked)]="checked"
       [disabled]="disabled" [attr.name]="name" [attr.aria-label]="ariaLabel || null"
       [attr.aria-labelledBy]="ariaLabelledby" [attr.aria-checked]="getAriaChecked()"
       [attr.aria-describedby]="ariaDescribedby" (change)="onInteractionEvent($event)" (click)="onInputClick($event)">
