feat(panel): update footer to use variable color for colored variant

--- a/projects/layout/panel/src/lib/footer/footer.component.scss
+++ b/projects/layout/panel/src/lib/footer/footer.component.scss
@@ -5,7 +5,7 @@
 
 [data-theme='dark'] :host {
   --bordered__border-color: rgba(0, 0, 0, 0.15);
-  --colored__background-color: #27313f;
+  --colored__background-color: var(--color--gray-700);
 }
 
 :host {
