feat(banner): add white-space back to title to fix text wrapping

--- a/projects/feedback/banner/src/lib/banner.component.scss
+++ b/projects/feedback/banner/src/lib/banner.component.scss
@@ -124,7 +124,7 @@
   color: var(--xcu-banner--color);
   // overflow: hidden;
   text-overflow: ellipsis;
-  // white-space: nowrap;
+  white-space: nowrap;
   margin: 0;
   padding: 0;
   max-width: fit-content;
