--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -1,6 +1,6 @@
 [data-theme='light'] :host {
-  --background-color: var(--color--white);
-  --well__color: var(--color--gray-50);
+  --panel__background-color: var(--color--white);
+  --panel__well__color: var(--color--gray-50);
 
   &.well-on-gray {
     background-color: var(--color--gray-200);
@@ -8,8 +8,8 @@
 }
 
 [data-theme='dark'] :host {
-  --background-color: var(--theme--background-accent);
-  --well__color: var(--color--gray-900);
+  --panel__background-color: var(--theme--background-accent);
+  --panel__well__color: var(--color--gray-900);
 
   &.well-on-gray {
     background-color: var(--color--gray-800);
@@ -19,7 +19,7 @@
 :host {
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  background-color: var(--background-color);
+  background-color: var(--panel__background-color);
   display: flex;
   flex-direction: column;
 
@@ -49,7 +49,7 @@
   }
 
   &.well {
-    background-color: var(--well__color);
+    background-color: var(--panel__well__color);
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
   }
 }
